--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
-  <h1>Bem vindo à Comunidade FPE</h1>
+  <h1>Bem-vindo à Comunidade FPE</h1>
   <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
   <nav>
     <ul>
