--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       text-align: center;
       padding: 50px;
     }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #666;
+    }
+    nav {
+      margin-top: 20px;
+    }
     nav ul {
       list-style-type: none;
       padding: 0;
@@ -20,7 +29,10 @@
     }
     nav ul li a {
       text-decoration: none;
-      color: #0366d6;
+      color: #007BFF;
+    }
+    nav ul li a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -31,8 +43,12 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="memes.html">Memes</a></li>
+      <li><a href="ocs.html">OC's</a></li>
+      <li><a href="dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
 </body>
 </html>
+
 
