--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="paperschool.html">Paper School</a></li>
-      <li><a href="memes.html">Memes</a></li>
-      <li><a href="ocs.html">OC's</a></li>
-      <li><a href="dangerau.html">DANGER AU</a></li>
+      <li><a href="Paperschool.html">Paper School</a></li>
+      <li><a href="Memes.html">Memes</a></li>
+      <li><a href="Ocs.html">OC's</a></li>
+      <li><a href="Dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
 </body>
 </html>
-
-
