--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
+      padding: 20px;
+      line-height: 1.6;
     }
-    h1 {
+    h1, h2 {
+      text-align: center;
       color: #333;
     }
     p {
       color: #666;
     }
     nav {
-      margin-top: 20px;
+      text-align: center;
+      margin-bottom: 20px;
     }
     nav ul {
       list-style-type: none;
@@ -34,19 +36,16 @@
     nav ul li a:hover {
       text-decoration: underline;
     }
+    section {
+      margin-bottom: 50px;
+    }
   </style>
 </head>
 <body>
   <h1>Bem-vindo à Comunidade FPE</h1>
   <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
+
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Paperschool.html">Paper School</a></li>
-      <li><a href="Memes.html">Memes</a></li>
-      <li><a href="Ocs.html">OC's</a></li>
-      <li><a href="Dangerau.html">DANGER AU</a></li>
-    </ul>
-  </nav>
-</body>
-</html>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#paper-school">Paper School</a
