--- a/index.html
+++ b/index.html
@@ -48,4 +48,36 @@
   <nav>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#paper-school">Paper School</a
+      <li><a href="#paper-school">Paper School</a></li>
+      <li><a href="#memes">Memes</a></li>
+      <li><a href="#ocs">OC's</a></li>
+      <li><a href="#danger-au">DANGER AU</a></li>
+    </ul>
+  </nav>
+
+  <section id="home">
+    <h2>Home</h2>
+    <p>Bem-vindo à Comunidade FPE. Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
+  </section>
+
+  <section id="paper-school">
+    <h2>Paper School</h2>
+    <p>Aqui tem informações da série original feita por Kate.</p>
+  </section>
+
+  <section id="memes">
+    <h2>Memes</h2>
+    <p>Aqui tem memes da FPE. Passe eu tenho aqui.</p>
+  </section>
+
+  <section id="ocs">
+    <h2>OC's</h2>
+    <p>Essa página tem alguns OCs de FPE criados pelos fãs.</p>
+  </section>
+
+  <section id="danger-au">
+    <h2>DANGER AU</h2>
+    <p>Essa página tem tudo sobre a FPE DANGER AU criada por Xenko.</p>
+  </section>
+</body>
+</html>
