--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
       text-align: center;
+      padding: 50px;
+    }
+    h1 {
       color: #333;
     }
     p {
       color: #666;
     }
     nav {
-      text-align: center;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
     nav ul {
       list-style-type: none;
@@ -36,48 +34,20 @@
     nav ul li a:hover {
       text-decoration: underline;
     }
-    section {
-      margin-bottom: 50px;
-    }
   </style>
 </head>
 <body>
   <h1>Bem-vindo à Comunidade FPE</h1>
   <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
-
   <nav>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#paper-school">Paper School</a></li>
-      <li><a href="#memes">Memes</a></li>
-      <li><a href="#ocs">OC's</a></li>
-      <li><a href="#danger-au">DANGER AU</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="memes.html">Memes</a></li>
+      <li><a href="ocs.html">OC's</a></li>
+      <li><a href="dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
-
-  <section id="home">
-    <h2>Home</h2>
-    <p>Bem-vindo à Comunidade FPE. Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
-  </section>
-
-  <section id="paper-school">
-    <h2>Paper School</h2>
-    <p>Aqui tem informações da série original feita por Kate.</p>
-  </section>
-
-  <section id="memes">
-    <h2>Memes</h2>
-    <p>Aqui tem memes da FPE. Passe eu tenho aqui.</p>
-  </section>
-
-  <section id="ocs">
-    <h2>OC's</h2>
-    <p>Essa página tem alguns OCs de FPE criados pelos fãs.</p>
-  </section>
-
-  <section id="danger-au">
-    <h2>DANGER AU</h2>
-    <p>Essa página tem tudo sobre a FPE DANGER AU criada por Xenko.</p>
-  </section>
 </body>
 </html>
+
