--- a/index.html
+++ b/index.html
@@ -4,51 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidade FPE - Home</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      color: #666;
-    }
-    nav {
-      margin-top: 20px;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    nav ul li {
-      display: inline;
-      margin: 0 10px;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: #007BFF;
-    }
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
-  <h1>Bem-vindo à Comunidade FPE</h1>
+  <h1>Bem vindo à Comunidade FPE</h1>
   <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="paperschool.html">Paper School</a></li>
-      <li><a href="memes.html">Memes</a></li>
-      <li><a href="ocs.html">OC's</a></li>
-      <li><a href="dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
 </body>
 </html>
+
 
 
