--- a/paperschool.html
+++ b/paperschool.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Paper School</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Paper School</h1>
+  <p>Aqui tem informações da série original feita por Kate.</p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paperschool.html">Paper School</a></li>
+    </ul>
+  </nav>
+</body>
+</html>
 
