--- a/paperschool.html
+++ b/paperschool.html
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="memes.hmtl">Memes</a></li>
     </ul>
   </nav>
 </body>
