--- a/Memes.html
+++ b/Memes.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Memes</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Memes</h1>
+  <p>Aqui tem memes da FPE. Passe o tempo aqui.</p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="memes.hmtl">Memes</a></li>
+    </ul>
+  </nav>
+</body>
+</html>
