--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
   <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
-  <h1>Bem vindo à Comunidade FPE</h1>
+  <h1>Bem-vindo à Comunidade FPE</h1>
   <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="paperschool.html">Paper School</a></li>
-      <li><a href="memes.hmtl">Memes</a></li>
+      <li><a href="memes.html">Memes</a></li>
+      <li><a href="ocs.html">OC's</a></li>
+      <li><a href="dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
 </body>
 </html>
-
-
-
