--- a/memes.html
+++ b/memes.html
@@ -13,7 +13,9 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="paperschool.html">Paper School</a></li>
-      <li><a href="memes.hmtl">Memes</a></li>
+      <li><a href="memes.html">Memes</a></li>
+      <li><a href="ocs.html">OC's</a></li>
+      <li><a href="dangerau.html">DANGER AU</a></li>
     </ul>
   </nav>
 </body>
