--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidade FPE - Home</title>
-  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS -->
 </head>
 <body>
   <h1>Bem-vindo à Comunidade FPE</h1>
