--- a/paperschool.html
+++ b/paperschool.html
@@ -5,42 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidade FPE - Paper School</title>
   <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS -->
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #f0f0f0;
-    }
-    h1, p, nav {
-      color: #333;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    nav ul li {
-      display: inline;
-      margin-right: 10px;
-    }
-    nav ul li a {
-      color: #333;
-      text-decoration: none;
-    }
-    .character {
-      margin: 20px 0;
-    }
-    .character h2 {
-      cursor: pointer;
-      color: #007BFF;
-    }
-    .character-info {
-      display: none;
-      margin-top: 10px;
-      border: 1px solid #ddd;
-      padding: 10px;
-      background-color: #fff;
-    }
-  </style>
 </head>
 <body>
   <h1>Paper School</h1>
@@ -56,35 +20,20 @@
   </nav>
   <div class="character-list">
     <div class="character">
-      <h2 onclick="toggleInfo('char1')">Personagem 1</h2>
-      <div id="char1" class="character-info">
-        <p>Informações detalhadas sobre o Personagem 1.</p>
-      </div>
+      <h2 onclick="loadCharacter('personagem1.html')">Personagem 1</h2>
     </div>
     <div class="character">
-      <h2 onclick="toggleInfo('char2')">Personagem 2</h2>
-      <div id="char2" class="character-info">
-        <p>Informações detalhadas sobre o Personagem 2.</p>
-      </div>
+      <h2 onclick="loadCharacter('personagem2.html')">Personagem 2</h2>
     </div>
     <div class="character">
-      <h2 onclick="toggleInfo('char3')">Personagem 3</h2>
-      <div id="char3" class="character-info">
-        <p>Informações detalhadas sobre o Personagem 3.</p>
-      </div>
+      <h2 onclick="loadCharacter('personagem3.html')">Personagem 3</h2>
     </div>
     <!-- Adicione mais personagens conforme necessário -->
   </div>
+  <div id="character-info-container">
+    <!-- Conteúdo do personagem será carregado aqui -->
+  </div>
 
-  <script>
-    function toggleInfo(id) {
-      const info = document.getElementById(id);
-      if (info.style.display === "none" || info.style.display === "") {
-        info.style.display = "block";
-      } else {
-        info.style.display = "none";
-      }
-    }
-  </script>
+  <script src="js/script.js"></script> <!-- Link para o JavaScript -->
 </body>
 </html>
