--- a/paperschool.html
+++ b/paperschool.html
@@ -20,13 +20,13 @@
   </nav>
   <div class="character-list">
     <div class="character">
-      <h2 onclick="loadCharacter('personagem1.html')">Miss Circle</h2>
+      <h2 onclick="loadCharacter('personagem1.html')">Personagem 1</h2>
     </div>
     <div class="character">
-      <h2 onclick="loadCharacter('personagem2.html')">Oliver</h2>
+      <h2 onclick="loadCharacter('personagem2.html')">Personagem 2</h2>
     </div>
     <div class="character">
-      <h2 onclick="loadCharacter('personagem3.html')">Claire</h2>
+      <h2 onclick="loadCharacter('personagem3.html')">Personagem 3</h2>
     </div>
     <!-- Adicione mais personagens conforme necessário -->
   </div>
