--- a/personagem1.html
+++ b/personagem1.html
@@ -1,4 +1,5 @@
 <div class="character-info">
-  <h3>Miss Circle virou o simbolo de FPE </h3>
-  <p>Miss Circle...</p>
+  <h3>Detalhes do Personagem 1</h3>
+  <p>Informações detalhadas sobre o Personagem 1.</p>
 </div>
+
