--- a/paperschool.html
+++ b/paperschool.html
@@ -19,11 +19,12 @@
   <section id="characters">
     <h2>Personagens</h2>
     
-    <!-- Personagem 1 -->
+    <!-- Miss Circle -->
     <div class="character">
-      <img src="images/characters/personagem1.jpg" alt="Personagem 1">
-      <h3>Nome do Personagem 1</h3>
-      <p>Descrição do personagem 1. Aqui você pode adicionar informações sobre o personagem, sua história, habilidades, etc.</p>
+      <img src="images/characters/personagem1.jpg" alt="Miss Circle">
+      <h3>Miss Circle</h3>
+      <p>Miss Circle virou o simbolo de FPE. Algo que representa FPE.
+         Com seus 295 cm (ou seja 2 metris e 95 centímetros) ela da aulas de matemática.</p>
     </div>
 
     <!-- Personagem 2 -->
