--- a/paperschool.html
+++ b/paperschool.html
@@ -21,7 +21,7 @@
     
     <!-- Miss Circle -->
     <div class="character">
-      <img src="images/characters/personagem1.jpg" alt="Miss Circle">
+      <img src="images/characters/personagem1.jpg" alt="https://static.wikia.nocookie.net/421516f8-b23b-488d-b5c7-a5fd1cf38632/scale-to-width/755">
       <h3>Miss Circle</h3>
       <p>Miss Circle virou o simbolo de FPE. Algo que representa FPE.
          Com seus 295 cm (ou seja 2 metris e 95 centímetros) ela da aulas de matemática.</p>
