--- a/paperschool.html
+++ b/paperschool.html
@@ -19,7 +19,7 @@
   <section id="characters">
     <h2>Personagens</h2>
     
-    <!-- Miss Circle -->
+    <!-- Personagem 1 -->
     <div class="character">
       <img src="images/characters/personagem1.jpg" alt="https://static.wikia.nocookie.net/421516f8-b23b-488d-b5c7-a5fd1cf38632/scale-to-width/755">
       <h3>Miss Circle</h3>
