--- a/paperschool.html
+++ b/paperschool.html
@@ -21,17 +21,9 @@
     
     <!-- Personagem 1 -->
     <div class="character">
-      <img src="images/characters/personagem1.jpg" alt="https://static.wikia.nocookie.net/421516f8-b23b-488d-b5c7-a5fd1cf38632/scale-to-width/755">
+      <img src="images/characters/FPE Miss Circle.webp" alt="Miss Circle">
       <h3>Miss Circle</h3>
-      <p>Miss Circle virou o simbolo de FPE. Algo que representa FPE.
-         Com seus 295 cm (ou seja 2 metris e 95 centímetros) ela da aulas de matemática.</p>
-    </div>
-
-    <!-- Personagem 2 -->
-    <div class="character">
-      <img src="images/characters/personagem2.jpg" alt="Personagem 2">
-      <h3>Nome do Personagem 2</h3>
-      <p>Descrição do personagem 2. Aqui você pode adicionar informações sobre o personagem, sua história, habilidades, etc.</p>
+      <p>Descrição do personagem Miss Circle. Aqui você pode adicionar informações sobre o personagem, sua história, habilidades, etc.</p>
     </div>
 
     <!-- Adicione mais personagens conforme necessário -->
