--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidade FPE - Home</title>
-  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
-  <h1>Bem-vindo à Comunidade FPE</h1>
-  <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
+  <header>
+    <h1>Bem vindo a Comunidade FPE</h1>
+    <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
+  </header>
+
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -16,7 +19,13 @@
       <li><a href="memes.html">Memes</a></li>
       <li><a href="ocs.html">OC's</a></li>
       <li><a href="dangerau.html">DANGER AU</a></li>
+      <!-- Adicione mais links conforme necessário -->
     </ul>
   </nav>
+
+  <main>
+    <img src="images/FPEC.Home" alt="Imagem da Comunidade FPE" style="width:100%;max-width:600px;">
+  </main>
 </body>
 </html>
+
