--- a/paperschool.html
+++ b/paperschool.html
@@ -25,7 +25,7 @@
     
     <!-- Personagem Miss Circle -->
     <div class="character">
-      <img src="images/characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
+      <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
       <h3>Miss Circle</h3>
       <p>Descrição do personagem Miss Circle. Aqui você pode adicionar informações sobre o personagem, sua história, habilidades, etc.</p>
     </div>
