--- a/paperschool.html
+++ b/paperschool.html
@@ -27,7 +27,7 @@
     <div class="character">
       <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
       <h3>Miss Circle</h3>
-      <p>Descrição do personagem Miss Circle. Aqui você pode adicionar informações sobre o personagem, sua história, habilidades, etc.</p>
+      <p>Miss Circle virou o simbolo de FPE. Virou algo que representa a comunidade como um todo. Com seus 2 metros de altura quase 3, ela dá aulas de matemática.</p>
     </div>
     
     <!-- Adicione mais personagens conforme necessário -->
