--- a/paperschool.html
+++ b/paperschool.html
@@ -29,6 +29,13 @@
       <h3>Miss Circle</h3>
       <p>Miss Circle virou o simbolo de FPE. Virou algo que representa a comunidade como um todo. Com seus 2 metros de altura quase 3, ela dá aulas de matemática.</p>
     </div>
+
+    <!-- Personagem Claire -->
+    <div class="character">
+      <img src="images.characters/FPE Claire.webp" alt="Miss Circle" style="width:200px;">
+      <h3>Claire</h3>
+      <p>Claire é a protagonista de FPE. É uma nova estudante que gosta de tirar nota boa</p>
+    </div>
     
     <!-- Adicione mais personagens conforme necessário -->
   </section>
