--- a/paperschool.html
+++ b/paperschool.html
@@ -28,6 +28,7 @@
       <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
       <h3>Miss Circle</h3>
       <p>Miss Circle virou o simbolo de FPE. Virou algo que representa a comunidade como um todo. Com seus 2 metros de altura quase 3, ela dá aulas de matemática.</p>
+      <li><a href="M.s.Circle.html">Mais informaçoes sobre Miss Circle</a></li>
     </div>
 
     <!-- Personagem Claire -->
