--- a/M.s.Circle.html
+++ b/M.s.Circle.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Miss Circle</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Miss Circle</h1>
+  <p>É uma professora de matemática da Paper School. Ela tem 2 metros e 95 centímetros.</p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="memes.html">Memes</a></li>
+      <li><a href="ocs.html">OC's</a></li>
+      <li><a href="dangerau.html">DANGER AU</a></li>
+    
+    </ul>
+  </nav>
 
