--- a/M.s.Circle.html
+++ b/M.s.Circle.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Miss Circle</h1>
+  <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
   <p>É uma professora de matemática da Paper School. Ela tem 2 metros e 95 centímetros.</p>
   <nav>
     <ul>
