--- a/M.s.Circle.html
+++ b/M.s.Circle.html
@@ -9,7 +9,9 @@
 <body>
   <h1>Miss Circle</h1>
   <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
-  <p>É uma professora de matemática da Paper School. Ela tem 2 metros e 95 centímetros.</p>
+  <p>É uma professora de matemática da Paper School.</p>
+  <h1>Aparencia</h1>
+  <p>Seus cabelos pretos vao desdos seus pés até depois da cabeca, Ela usa uma calça branca, na mao direita uma luva preta e na mao esquerda tem um Compasso gigante, ela veste uma camisa preta com botoes.</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
