--- a/M.s.Circle.html
+++ b/M.s.Circle.html
@@ -9,9 +9,14 @@
 <body>
   <h1>Miss Circle</h1>
   <img src="images.characters/FPE Miss Circle.webp" alt="Miss Circle" style="width:200px;">
-  <p>É uma professora de matemática da Paper School.</p>
+  <h1>informações base</h1>
+  <p>É uma professora de matemática da Paper School. Ela mata os alunos que reprovam em matemática com seu compasso gigante em sua mao esquerda.</p>
   <h1>Aparencia</h1>
   <p>Seus cabelos pretos vao desdos seus pés até depois da cabeca, Ela usa uma calça branca, na mao direita uma luva preta e na mao esquerda tem um Compasso gigante, ela veste uma camisa preta com botoes.</p>
+  <h1>Curiosidades</h1>
+  <p>Miss Circle AMA os biscoitos OREO. Ela ama tanto que pode ser surbodinada com OREO pra nao matar quem reprova. Tá ai uma dica pra quem é ruim de matemática. Seu aluno preferido era o Oliver.Até o final do Basics in Behavior onde ela descobre que foi ele quem botou o papel escrito:"Saída" na sala da Alice</p>
+  <h1>História por trás</h1>
+  <p>Nao sabemos ainda</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
