--- a/paperschool.html
+++ b/paperschool.html
@@ -36,6 +36,7 @@
       <img src="images.characters/FPE Claire.webp" alt="Miss Circle" style="width:200px;">
       <h3>Claire</h3>
       <p>Claire é a protagonista de FPE. É uma nova estudante que gosta de tirar nota boa</p>
+      <li><a href="Claire.html">Mais informaçoes sobre Claire</a></li>
     </div>
     
     <!-- Adicione mais personagens conforme necessário -->
