--- a/Claire.html
+++ b/Claire.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Miss Circle</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Claire</h1>
+  <img src="images.characters/FPE Claire.webp" alt="Claire" style="width:200px;">
+  <h1>informações base</h1>
+  <p>É uma nova aluna na Paper School. É a protagonista de FPE</p>
+  <h1>Aparencia</h1>
+  <p>Tem cabelos marrons, um lacinho verde, uma camisa branca de manga longa, um casaco azul sem manga, um shorts marron, uma meia verde listrada e tenis vermelho.</p>
+  <h1>Curiosidades</h1>
+  <p>Ela tem um gatinho chamado Moe Moe</p>
+  <h1>História por trás</h1>
+  <p>Claire era uma moradora da cidade. Em Basics in Behavior ela morre por Alice mas ainda está viva andando junto de Biscuit e Anova. Nao se sabe como ela está viva.</p>
+  <nav>
+    <ul>
+      <li><a href="paperschool.html">Paper School</a></li>
+    </ul>
+  </nav>
 
