--- a/Claire.html
+++ b/Claire.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comunidade FPE - Miss Circle</title>
+  <title>Comunidade FPE - Claire</title>
   <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
 </head>
 <body>
   <h1>Claire</h1>
-  <img src="images.characters/FPE Claire.webp" alt="Claire" style="width:200px;">
+  <img src="images.characters/FPE Claire.webp" alt="Claire" style="width:200px;"> <img src="images.characters/FPE Claire 2.webp" alt="Claire" style="width:200px;">
   <h1>informações base</h1>
   <p>É uma nova aluna na Paper School. É a protagonista de FPE</p>
   <h1>Aparencia</h1>
