--- a/paperschool.html
+++ b/paperschool.html
@@ -33,7 +33,7 @@
 
     <!-- Personagem Claire -->
     <div class="character">
-      <img src="images.characters/FPE Claire.webp" alt="Miss Circle" style="width:200px;">
+      <img src="images.characters/FPE Claire.webp" alt="Miss Circle" style="width:200px;"> <img src="images.characters/FPE Claire 2.webp" alt="Claire" style="width:200px;">
       <h3>Claire</h3>
       <p>Claire é a protagonista de FPE. É uma nova estudante que gosta de tirar nota boa</p>
       <li><a href="Claire.html">Mais informaçoes sobre Claire</a></li>
