--- a/Claire.html
+++ b/Claire.html
@@ -12,7 +12,7 @@
   <h1>informações base</h1>
   <p>É uma nova aluna na Paper School. É a protagonista de FPE</p>
   <h1>Aparencia</h1>
-  <p>Tem cabelos marrons, um lacinho verde, uma camisa branca de manga longa, um casaco azul sem manga, um shorts marron, uma meia verde listrada e tenis vermelho.</p>
+  <p>Tem cabelos marrons, um lacinho verde, uma camisa branca de manga longa, um casaco azul sem manga, um colar com um potinho com terra e uma planta, um shorts marron, uma meia verde listrada e tenis vermelho.</p>
   <h1>Curiosidades</h1>
   <p>Ela tem um gatinho chamado Moe Moe</p>
   <h1>História por trás</h1>
