--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Bem vindo a Comunidade FPE</h1>
-    <p>Aqui tem informações do universo de FPE. O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
+    <p>Aqui tem informações do universo de FPE. Este site é perfeito para novos fans conhecerem mais sobre FPE. site criado por: Lucas Emidio O site ainda está em desenvolvimento. Ainda falta bastantes informações.</p>
   </header>
 
   <nav>
