--- a/paperschool.html
+++ b/paperschool.html
@@ -38,6 +38,14 @@
       <p>Claire é a protagonista de FPE. É uma nova estudante que gosta de tirar nota boa</p>
       <li><a href="Claire.html">Mais informaçoes sobre Claire</a></li>
     </div>
+
+     <!-- Personagem Oliver/Katie -->
+    <div class="character">
+      <img src="images.characters/Oliver FPE 1.webp" alt="Miss Circle" style="width:200px;"> <img src="images.characters/Oliver FPE 2.jfif" alt="Claire" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
+      <h3>Oliver/Katie</h3>
+      <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School. A </p>
+      <li><a href="Oliver.html">Mais informaçoes sobre Oliver/Katie</a></li>
+    </div>
     
     <!-- Adicione mais personagens conforme necessário -->
   </section>
