--- a/paperschool.html
+++ b/paperschool.html
@@ -43,7 +43,7 @@
     <div class="character">
       <img src="images.characters/Oliver FPE 1.webp" alt="Miss Circle" style="width:200px;"> <img src="images.characters/Oliver FPE 2.jfif" alt="Claire" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
       <h3>Oliver/Katie</h3>
-      <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School. A </p>
+      <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School. Ele pode mudar de genero e quando é menina vira a Katie</p>
       <li><a href="Oliver.html">Mais informaçoes sobre Oliver/Katie</a></li>
     </div>
     
