--- a/Oliver.html
+++ b/Oliver.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Oliver/Katie</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Claire</h1>
+  <img src="images.characters/Oliver FPE 1.webp" alt="Claire" style="width:200px;"> <img src="images.characters/Oliver FPE 2.jfif" alt="Claire" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
+  <h1>informações base</h1>
+  <p>É o principal bully da Paper School</p>
+  <h1>Aparencia</h1>
+  <p>Tem cabelos brancos, um arco preto em formato de chifres pretos, blusa preta igual a <li><a href="M.s.Circle.html">Miss Circle</a></li>, shorts azuis, meias brancas longas e botas pretas</p>
+  <h1>Curiosidades</h1>
+  <p>É transexual. Quando está no genero masculino chama-se Oliver, quando está no genero feminino chama-se Katie. Tem parentes cabra. Podem ser pais adotivos ou etc.</p>
+  <h1>História por trás</h1>
+  <p>Ele conheceu Alice na infancia. Fez uma universidade junto de Alice. Nao nessesáriamente é aluno da <li><a href="paperschool.html">Paper School</a></li>. É valentao da <li><a href="paperschool.html">Paper School</a></li> junto de Zip e Edward</p>
+  <nav>
+    <ul>
+      <li><a href="paperschool.html">Paper School</a></li>
+    </ul>
+  </nav>
+
 
