--- a/Claire.html
+++ b/Claire.html
@@ -16,7 +16,7 @@
   <h1>Curiosidades</h1>
   <p>Ela tem um gatinho chamado Moe Moe</p>
   <h1>História por trás</h1>
-  <p>Claire era uma moradora da cidade. Em Basics in Behavior ela morre por Alice mas ainda está viva andando junto de Biscuit e Anova. Nao se sabe como ela está viva.</p>
+  <p>Claire era uma moradora da cidade. Em Basics in Behavior Oliver, Edward e Zip atrapalham ela de estudar fazendo ela reprovar em matemática, ciencias e línguas. Depois de Engel salva-la de morrer pra Miss Circle, ela entra na sala de Alice achando que era a saída pois Oliver botou um papel escrito:"Saída". Ela consegue fugir até a porta de saída verdadeira, Mas estava trancada. Ela morre por Alice mas ainda está viva andando junto de Biscuit e Anova. Nao se sabe como ela está viva.</p>
   <nav>
     <ul>
       <li><a href="paperschool.html">Paper School</a></li>
