--- a/paperschool.html
+++ b/paperschool.html
@@ -46,6 +46,14 @@
       <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School. Ele pode mudar de genero e quando é menina vira a Katie</p>
       <li><a href="Oliver.html">Mais informaçoes sobre Oliver/Katie</a></li>
     </div>
+
+    <!-- Personagem Alice -->
+    <div class="character">
+      <img src="images.characters/AliceFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/AliceFPE2.webp" alt="Alice" style="width:200px;">
+      <h3>Alice</h3>
+      <p>Alice era uma das populares de FPE, mas por algum motivo ela está em uma sala escura e é considerada um monstro.</p>
+      <li><a href="Alice.html">Mais informaçoes sobre Alice</a></li>
+    </div>
     
     <!-- Adicione mais personagens conforme necessário -->
   </section>
