--- a/Alice.html
+++ b/Alice.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Oliver/Katie</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Alice</h1>
+  <img src="images.characters/AliceFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/AliceFPE2.webp" alt="Alice" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
+  <h1>informações base</h1>
+  <p>É namorada de Oliver. Ela por algum motivo é considerada um monstro</p>
+  <h1>Aparencia</h1>
+  <p>Cabelo marron, coroa na cabeça (representa que ela era popular), blusa de manga longa branca, por cima uma blusa de manga longa azul, uma saia preta, um colar em formato de um triangulo riscado, meia branca e chinelo(agora eu entendo porque chamam ela de monstro. MEIA COM CHINELO É COISA DE PSICOPA-)</p>
+  <h1>Curiosidades</h1>
+  <p>Já fez uma universidade com o Oliver. Ela tem um coelinho. QUE TA VIVO POR ALGUM MOTIVO JÁ QUE ELA COMEU ELE VIVO.</p>
+  <h1>História por trás</h1>
+  <p>Conheceu Oliver na infancia, fez uma universidade com Oliver e namora ele. Ela era popular na Paper School e nao necessária estuda lá. Mas por algum motivo foi considerada monstro. Talvez porque ela se transforma em um monstro preto, "invoca" espinhos pretos do chao e tem garras. Foi libertada de sua sala por Claire e matou Claire. Alice fugiu e nao se sabe onde ela está. Provavelmente na floresta nevada.</p>
+  <nav>
+    <ul>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="M.s.Circle.html">Miss Circle</a></li>
+       <li><a href="Claire.html">Claire</a></li>
+    </ul>
+  </nav>
+
+
 
