--- a/Alice.html
+++ b/Alice.html
@@ -20,8 +20,8 @@
   <nav>
     <ul>
       <li><a href="paperschool.html">Paper School</a></li>
-      <li><a href="M.s.Circle.html">Miss Circle</a></li>
        <li><a href="Claire.html">Claire</a></li>
+      <li><a href="Oliver.html">Oliver/Katie</a></li>
     </ul>
   </nav>
 
