--- a/Alice.html
+++ b/Alice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Alice</h1>
-  <img src="images.characters/AliceFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/AliceFPE2.webp" alt="Alice" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
+  <img src="images.characters/AliceFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/AliceFPE2.webp" alt="Alice" style="width:200px;">
   <h1>informações base</h1>
   <p>É namorada de Oliver. Ela por algum motivo é considerada um monstro</p>
   <h1>Aparencia</h1>
