--- a/memes.html
+++ b/memes.html
@@ -11,7 +11,7 @@
   <p>Aqui tem memes da FPE. Passe o tempo aqui.</p>
   <img src="images.memes/Memes FPE.jpg" alt="meme1" style="width:200px;">
   <p>Ai ai. A Claire se fu... O ALI O ENGEL!!!</p>
-  <img src="images.memes/Memes FPE2-1.jpg" alt="meme2" style="width:200px;"> <img src="images.memes/Memes FPE2.jpg" alt="meme2" style="width:200px;">
+  <img src="images.memes/Memes FPE2-1.jpg" alt="meme2" style="width:200px;"> <img src="images.memes/Memes FPE2.jfif" alt="meme2" style="width:200px;">
   <p>Esse daqui é especial. Isso eu nem sei se é pra ser considerado um meme. isso já apareceu no Basics in Behavior 2 vezes ou 3. Mas ainda consideram ele um meme. Agora nunca me explicaram se isso é um gato ou um pao.</p>
   <nav>
     <ul>
