--- a/memes.html
+++ b/memes.html
@@ -13,6 +13,12 @@
   <p>Ai ai. A Claire se fu... O ALI O ENGEL!!!</p>
   <img src="images.memes/Memes FPE2-1.jpg" alt="meme2" style="width:200px;"> <img src="images.memes/Memes FPE2.jfif" alt="meme2" style="width:200px;">
   <p>Esse daqui é especial. Isso eu nem sei se é pra ser considerado um meme. isso já apareceu no Basics in Behavior 2 vezes ou 3. Mas ainda consideram ele um meme. Agora nunca me explicaram se isso é um gato ou um pao.</p>
+  <img src="images.memes/Memes FPE3.jpg" alt="meme3" style="width:200px;">
+  <p>...Canoni- A nao. Nao tem como ser canonico. A Alice nunca abriria a porta ela mesma. Ou abriria..?</p>
+  <img src="images.memes/Memes FPE4.jpg" alt="meme4" style="width:200px;">
+  <p>100% Canonico. JOJO'S REFERENCEEEEEEEE</p>
+  <img src="images.memes/Memes FPE5.jpg" alt="meme4" style="width:200px;">
+  <p>Circle foi ele, nao fui eu. Circle CIRCLE!!! ABAIXA ESSE COMPASSO-</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
