--- a/memes.html
+++ b/memes.html
@@ -19,6 +19,8 @@
   <p>100% Canonico. JOJO'S REFERENCEEEEEEEE</p>
   <img src="images.memes/Memes FPE5.jpg" alt="meme4" style="width:200px;">
   <p>Circle foi ele, nao fui eu. Circle CIRCLE!!! ABAIXA ESSE COMPASSO-</p>
+   <img src="images.memes/Memes FPE6.jpg" alt="meme4" style="width:200px;">
+  <p>FOI ELE!!! TAKA-LES COMPASSO GEORGE!!!</p>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
