--- a/paperschool.html
+++ b/paperschool.html
@@ -43,7 +43,7 @@
     <div class="character">
       <img src="images.characters/Oliver FPE 1.webp" alt="Miss Circle" style="width:200px;"> <img src="images.characters/Oliver FPE 2.jfif" alt="Claire" style="width:200px;"> <img src="images.characters/Oliver Katie FPE1.jfif" alt="Claire" style="width:200px;">
       <h3>Oliver/Katie</h3>
-      <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School. Ele pode mudar de genero e quando é menina vira a Katie</p>
+      <p>Oliver é um dos personagens favoritos da comunidade. Ele é o aluno preferido de Miss Circle e é o principal bully da Paper School junto de Edward e Zip. Ele pode mudar de genero e quando é menina vira a Katie</p>
       <li><a href="Oliver.html">Mais informaçoes sobre Oliver/Katie</a></li>
     </div>
 
@@ -53,6 +53,22 @@
       <h3>Alice</h3>
       <p>Alice era uma das populares de FPE, mas por algum motivo ela está em uma sala escura e é considerada um monstro.</p>
       <li><a href="Alice.html">Mais informaçoes sobre Alice</a></li>
+    </div>
+
+    <!-- Personagem Edward -->
+    <div class="character">
+      <img src="images.characters/EdwardFPE.webp" alt="Alice" style="width:200px;">
+      <h3>Edward</h3>
+      <p>Edward é um bully junto de Oliver e Zip. Ele é um engenheiro</p>
+      <li><a href="Edward.html">Mais informaçoes sobre Edward</a></li>
+    </div>
+
+    <!-- Personagem Edward -->
+    <div class="character">
+      <img src="images.characters/ZipFPE.webp" alt="Alice" style="width:200px;">
+      <h3>Zip</h3>
+      <p>Zip é uma menina brincalhona que é uma dos bullys junto de Oliver e Edward</p>
+      <li><a href="Zip.html">Mais informaçoes sobre Zip</a></li>
     </div>
     
     <!-- Adicione mais personagens conforme necessário -->
