--- a/Edward.html
+++ b/Edward.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Miss Circle</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Edward</h1>
+  <img src="images.characters/EdwardFPE.webp" alt="Edward" style="width:200px;">
+  <h1>informações base</h1>
+  <p>É um dos nullys da escola junto de Zip e Oliver. Ele sabe engenharia e usa ela pra criar robos pros seus bullys</p>
+  <h1>Aparencia</h1>
+  <p>Seus cabelos brancos vao desdo seus pés até depois da sua cabeça, tem chifres mas diferente de Oliver os chifres sao verdadeiros, Tem um óculos, usa botas pretas, calça preta, roupa preta com no final uma parte branca e um rabo</p>
+  <h1>Curiosidades</h1>
+  <p>...alguém fala pra Katie falar mais do Edward?</p>
+  <h1>História por trás</h1>
+  <p>Ele é um bully da Paper School e ajudou Zip e Oliver a atrapalharem Claire de estudar. Depois ele nao aparece mais em Basics in Behavior</p>
+  <nav>
+    <ul>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="Oliver.html">Oliver/Katie</a></li>
+      <li><a href="Zip.html">Zip</a></li>
+      <li><a href="Claire.html">Claire</a></li>
+    </ul>
+  </nav>
