--- a/Oliver.html
+++ b/Oliver.html
@@ -14,14 +14,16 @@
   <h1>Aparencia</h1>
   <p>Tem cabelos brancos, um arco preto em formato de chifres pretos, blusa preta, shorts azuis, meias brancas longas e botas pretas</p>
   <h1>Curiosidades</h1>
-  <p>É transexual. Quando está no genero masculino chama-se Oliver, quando está no genero feminino chama-se Katie. Tem parentes cabra. Podem ser pais adotivos ou etc.</p>
+  <p>É transexual. Quando está no genero masculino chama-se Oliver, quando está no genero feminino chama-se Katie. Ele come sabao. Tem parentes cabra. Podem ser pais adotivos ou etc.</p>
   <h1>História por trás</h1>
   <p>Ele conheceu Alice na infancia. Fez uma universidade junto de Alice. Nao nessesáriamente é aluno da Paper School. É valentao da Paper School junto de Zip e Edward. Pra libertar Alice de sau sala, Oliver, Edward e Zip atrapalharam Claire de estudar, assim Claire tirou nota baixa em matemática, ciencias e línguas. Oliver botou na sala da Alice um papel escrito:"Saída" que fez Claire libertar Alice. Depois de Claire morrer, Oliver e Zip sao pegos tirando o papel de "Saída" da sala da Alice pela Miss Circle, Miss Bloomie e Miss Thavel. Provavelmente fugiu pra uma casa na floresta</p>
   <nav>
     <ul>
       <li><a href="paperschool.html">Paper School</a></li>
       <li><a href="M.s.Circle.html">Miss Circle</a></li>
-       <li><a href="Claire.html">Claire</a></li>
+      <li><a href="Claire.html">Claire</a></li>
+      <li><a href="Zip.html">Zip</a></li>
+      <li><a href="Edward.html">Edward</a></li>
     </ul>
   </nav>
 
