--- a/Zip.html
+++ b/Zip.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comunidade FPE - Zip</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- Link para o CSS, se aplicável -->
+</head>
+<body>
+  <h1>Zip</h1>
+  <img src="images.characters/ZipFPE.webp" alt="Edward" style="width:200px;">
+  <h1>informações base</h1>
+  <p>É um dos bullys da escola junto de Edward e Oliver.</p>
+  <h1>Aparencia</h1>
+  <p>cabelo meio branco meio preto, no cabelo desenhado tem "2 + 2 = 8" (QUE BURR-), tem oque parece ser um vestido branco, calça perta e botas pretas, uma cauda de dinossauro e uma capinha com desenhos.</p>
+  <h1>Curiosidades</h1>
+  <p>Ela tem um irmaozinho. Aparentemente gosta de piratas</p>
+  <h1>História por trás</h1>
+  <p>provavelmente já foi da creche da Paper School. Atrapalhou Claire de estudar junto de Oliver e Edward e foi pega com Oliver no final do Basics in behavior pela Miss Circle, Miss Bloomie e Miss Thavel.</p>
+  <nav>
+    <ul>
+      <li><a href="paperschool.html">Paper School</a></li>
+      <li><a href="Oliver.html">Oliver/Katie</a></li>
+      <li><a href="Edward.html">Edward</a></li>
+      <li><a href="Claire.html">Claire</a></li>
+    </ul>
+  </nav>
 
