--- a/Edward.html
+++ b/Edward.html
@@ -10,7 +10,7 @@
   <h1>Edward</h1>
   <img src="images.characters/EdwardFPE.webp" alt="Edward" style="width:200px;">
   <h1>informações base</h1>
-  <p>É um dos nullys da escola junto de Zip e Oliver. Ele sabe engenharia e usa ela pra criar robos pros seus bullys</p>
+  <p>É um dos bullys da escola junto de Zip e Oliver. Ele sabe engenharia e usa ela pra criar robos pros seus bullys</p>
   <h1>Aparencia</h1>
   <p>Seus cabelos brancos vao desdo seus pés até depois da sua cabeça, tem chifres mas diferente de Oliver os chifres sao verdadeiros, Tem um óculos, usa botas pretas, calça preta, roupa preta com no final uma parte branca e um rabo</p>
   <h1>Curiosidades</h1>
