--- a/Zip.html
+++ b/Zip.html
@@ -23,6 +23,7 @@
       <li><a href="Oliver.html">Oliver/Katie</a></li>
       <li><a href="Edward.html">Edward</a></li>
       <li><a href="Claire.html">Claire</a></li>
+      <li><a href="M.s.Circle.html">Miss Circle</a></li>
     </ul>
   </nav>
 
