--- a/memes.html
+++ b/memes.html
@@ -28,6 +28,8 @@
   <p>Circle foi ele, nao fui eu. Circle CIRCLE!!! ABAIXA ESSE COMPASSO-</p>
    <img src="images.memes/Memes FPE6.jpg" alt="meme4" style="width:200px;">
   <p>FOI ELE!!! TAKA-LES COMPASSO GEORGE!!!</p>
+  <img src="images.memes/MemesFPE7.jfif" alt="meme7" style="width:200px;">
+  <p>Esse daqui eu que considero meme. Feito pela própria Kate e postado no Twitter (Ou X). A BUBBLE SAO BOLHAS E NAO SABAO!!!!</p>
   </nav>
 </body>
 </html>
