--- a/paperschool.html
+++ b/paperschool.html
@@ -63,12 +63,28 @@
       <li><a href="Edward.html">Mais informaçoes sobre Edward</a></li>
     </div>
 
-    <!-- Personagem Edward -->
+    <!-- Personagem Zip -->
     <div class="character">
       <img src="images.characters/ZipFPE.webp" alt="Alice" style="width:200px;">
       <h3>Zip</h3>
       <p>Zip é uma menina brincalhona que é uma dos bullys junto de Oliver e Edward</p>
       <li><a href="Zip.html">Mais informaçoes sobre Zip</a></li>
+    </div>
+
+    <!-- Personagem Engel -->
+    <div class="character">
+      <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.Jpg" alt="Engel" style="width:200px;">
+      <h3>Engel</h3>
+      <p>Engel era amigo de Claire e é amigo de Bubble. Ele se importa com os outros</p>
+      <li><a href="Engel.html">Mais informaçoes sobre Engel</a></li>
+    </div>
+
+    <!-- Personagem Bubble -->
+    <div class="character">
+      <img src="images.characters/BubbleFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/BubbleFPE2.jpg" alt="Alice" style="width:200px;">
+      <h3>Bubble</h3>
+      <p>Bubble era amiga de Claire e é amiga de Engel. Ela gosta de ver os outros limpos</p>
+      <li><a href="Bubble.html">Mais informaçoes sobre Bubble</a></li>
     </div>
     
     <!-- Adicione mais personagens conforme necessário -->
