--- a/paperschool.html
+++ b/paperschool.html
@@ -73,7 +73,7 @@
 
     <!-- Personagem Engel -->
     <div class="character">
-      <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.Jpg" alt="Engel" style="width:200px;">
+      <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.jpg" alt="Engel" style="width:200px;">
       <h3>Engel</h3>
       <p>Engel era amigo de Claire e é amigo de Bubble. Ele se importa com os outros</p>
       <li><a href="Engel.html">Mais informaçoes sobre Engel</a></li>
