--- a/Engel.html
+++ b/Engel.html
@@ -9,8 +9,8 @@
 <body>
   <h1>Alice</h1>
   <img src="images.characters/EngelFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/EngelFPE2.jpg" alt="Alice" style="width:200px;">
-  <h1>Gosta de estudar, Ele se importa com os outros. Nao gosta dos bullys.</h1>
-  <p>É namor</p>
+  <h1>Informaçoes base</h1>
+  <p>Gosta de estudar, Ele se importa com os outros. Nao gosta dos bullys.</p>
   <h1>Aparencia</h1>
   <p>Cabelo branco com uma pena com as cores vermelho e azul, uma camisa branca, um macacao preto, calça branca listrada, meia branca e tenis preto</p>
   <h1>Curiosidades</h1>
