--- a/Bubble.html
+++ b/Bubble.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Bubble</h1>
   <img src="images.characters/BubbleFPE.webp" alt="Alice" style="width:200px;"> <img src="images.characters/BubbleFPE2.jpg" alt="Alice" style="width:200px;">
-  <h1>Informaçoes base</h1>
+  <h1>informações base</h1>
   <p>era amiga de Claire, é amiga de Engel. Gosta de estuadar. Gosta de ver todo mundo limpo</p>
   <h1>Aparencia</h1>
   <p>cabelo de bolhas com um patinho de borracha e uma escova de dentes, blusa branca, macacao preto, short branco, meia branca e sapato preto</p>
